--- a/httpserver/test/Makefile
+++ b/httpserver/test/Makefile
@@ -1,6 +1,10 @@
+all:test test_cgi
+
 test:test.cc
+	g++ -o $@ $^ -std=c++11
+test_cgi:test_cgi.cc
 	g++ -o $@ $^ -std=c++11
 
 .PHONY:clean
 clean:
-	rm test
+	rm test test_cgi
