--- a/httpserver/cgicode/Makefile
+++ b/httpserver/cgicode/Makefile
@@ -1,7 +1,7 @@
 documet=cgi
 
 .PHONY:all
-all:$(documet) test_cgi cal_cgi
+all:$(documet) test_cgi cal_cgi mysql_cgi
 
 $(documet):
 	mkdir $@;
@@ -11,6 +11,10 @@ test_cgi:test_cgi.cc
 cal_cgi:cal_cgi.cc
 	g++ -o $@ $^;
 	mv $@ $(documet);
+mysql_cgi:mysql_cgi.cc
+	g++ -o $@ $^ -I./mysql/include -L./mysql/lib -lmysqlclient
+	mv $@ $(documet);
+#export LD_LIBRARY_PATH=lib绝对路径
 
 .PHONY:clean
 clean:
