留言板功能code...

--- a/httpserver/cgicode/Makefile
+++ b/httpserver/cgicode/Makefile
@@ -1,7 +1,7 @@
 documet=cgi
 
 .PHONY:all
-all:$(documet) test_cgi cal_cgi mysql_cgi
+all:$(documet) test_cgi cal_cgi mysql_cgi littleComment read
 
 $(documet):
 	mkdir $@;
@@ -15,6 +15,12 @@ mysql_cgi:mysql_cgi.cc
 	g++ -o $@ $^ -I./mysql/include -L./mysql/lib -lmysqlclient
 	mv $@ $(documet);
 #export LD_LIBRARY_PATH=lib绝对路径
+littleComment:littleComment.cc
+	g++ -o $@ $^
+	mv $@ $(documet);
+read:read_from_pipe.cc
+	g++ -o $@ $^
+	mv $@ $(documet);
 
 .PHONY:clean
 clean:
