血条,蓝条,技能实现,todo: 无敌帧处理,受击特效,不同种类敌人

--- a/Tivat_Survivor_Game/Tivat_Survivor_Game/Tivat_Survivor_Game.vcxproj
+++ b/Tivat_Survivor_Game/Tivat_Survivor_Game/Tivat_Survivor_Game.vcxproj
@@ -128,7 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="test.cpp" />
+    <ClCompile Include="oldversion.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.hpp" />
