--- a/Tivat_Survivor_Game/Tivat_Survivor_Game/Tivat_Survivor_Game.vcxproj.filters
+++ b/Tivat_Survivor_Game/Tivat_Survivor_Game/Tivat_Survivor_Game.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="test.cpp">
+    <ClCompile Include="oldversion.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
