角色选择场景完成, 游戏场景code...

--- a/plant_star_battle/plant_star_battle/plant_star_battle.vcxproj
+++ b/plant_star_battle/plant_star_battle/plant_star_battle.vcxproj
@@ -135,8 +135,10 @@
     <ClInclude Include="camera.h" />
     <ClInclude Include="game_scene.h" />
     <ClInclude Include="menu_scene.h" />
+    <ClInclude Include="platform.h" />
     <ClInclude Include="scene_manager.h" />
     <ClInclude Include="selector_scene.h" />
+    <ClInclude Include="timer.h" />
     <ClInclude Include="util.h" />
     <ClInclude Include="scene.h" />
     <ClInclude Include="vector2.h" />
