--- a/plant_star_battle/plant_star_battle/plant_star_battle.vcxproj.filters
+++ b/plant_star_battle/plant_star_battle/plant_star_battle.vcxproj.filters
@@ -25,6 +25,9 @@
     <Filter Include="头文件\player">
       <UniqueIdentifier>{fb847609-e55c-4ea7-a647-ea3b77135a39}</UniqueIdentifier>
     </Filter>
+    <Filter Include="头文件\bullet">
+      <UniqueIdentifier>{f5dbcefc-80c8-435a-845c-2b197bea1e5c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -77,8 +80,26 @@
     <ClInclude Include="player_sunflower.h">
       <Filter>头文件\player</Filter>
     </ClInclude>
-    <ClInclude Include="playerID.h">
+    <ClInclude Include="player_id.h">
       <Filter>头文件\player</Filter>
+    </ClInclude>
+    <ClInclude Include="bullet.h">
+      <Filter>头文件\bullet</Filter>
+    </ClInclude>
+    <ClInclude Include="pea_bullet.h">
+      <Filter>头文件\bullet</Filter>
+    </ClInclude>
+    <ClInclude Include="sun_bullet.h">
+      <Filter>头文件\bullet</Filter>
+    </ClInclude>
+    <ClInclude Include="sun_ex_bullet.h">
+      <Filter>头文件\bullet</Filter>
+    </ClInclude>
+    <ClInclude Include="status_bar.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="particle.h">
+      <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
