资源管理器实现

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # 我的忽略
 
+# 空洞武士 hollow_katana
+hollow_katana\hollow_katana\resources
+
 # turb项目
 indata
 outdata
@@ -13,9 +16,9 @@ turbExtra/turbExtra/python/data
 turbExtra/turbExtra/python/image
 turbExtra/turbExtra/python/model
 
+# 临时忽略
 # test_torch测试项目代码
 test_torch
-
 # 临时使用DLL的项目
 learn_DLL
 
