--- a/hollow_katana/hollow_katana/hollow_katana.vcxproj
+++ b/hollow_katana/hollow_katana/hollow_katana.vcxproj
@@ -127,30 +127,38 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="audio_manager.cpp" />
+    <ClCompile Include="barb.cpp" />
     <ClCompile Include="bullet_time_manager.cpp" />
     <ClCompile Include="character.cpp" />
     <ClCompile Include="character_manager.cpp" />
     <ClCompile Include="collision_manager.cpp" />
+    <ClCompile Include="enemy_hornet.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="player.cpp" />
     <ClCompile Include="player_state_node.cpp" />
+    <ClCompile Include="sword.cpp" />
     <ClCompile Include="resources_manager.cpp" />
     <ClCompile Include="state_machine.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="animation.h" />
     <ClInclude Include="atlas.h" />
+    <ClInclude Include="audio_manager.h" />
+    <ClInclude Include="barb.h" />
     <ClInclude Include="bullet_time_manager.h" />
     <ClInclude Include="character.h" />
     <ClInclude Include="character_manager.h" />
     <ClInclude Include="collision_box.h" />
     <ClInclude Include="collision_layer.h" />
     <ClInclude Include="collision_manager.h" />
+    <ClInclude Include="enemy_hornet.h" />
     <ClInclude Include="player.h" />
     <ClInclude Include="player_state_node.h" />
     <ClInclude Include="resources_manager.h" />
     <ClInclude Include="state_machine.h" />
     <ClInclude Include="state_node.h" />
+    <ClInclude Include="sword.h" />
     <ClInclude Include="timer.h" />
     <ClInclude Include="util.h" />
     <ClInclude Include="vector2.h" />
