--- a/hollow_katana/hollow_katana/hollow_katana.vcxproj.filters
+++ b/hollow_katana/hollow_katana/hollow_katana.vcxproj.filters
@@ -37,20 +37,20 @@
     <Filter Include="源文件\character">
       <UniqueIdentifier>{ed09fe37-9c33-4165-af96-09a01a542b42}</UniqueIdentifier>
     </Filter>
-    <Filter Include="头文件\property">
-      <UniqueIdentifier>{68356bf5-1979-41f5-a729-100e031e2ca4}</UniqueIdentifier>
-    </Filter>
     <Filter Include="源文件\property">
       <UniqueIdentifier>{928481b3-66f5-44eb-a8d9-7ed3a17bfc31}</UniqueIdentifier>
     </Filter>
     <Filter Include="头文件\scenery">
       <UniqueIdentifier>{3d685c93-04c4-4ddb-a5a4-5400f201945d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="头文件\particle">
-      <UniqueIdentifier>{e123d085-b8b6-4392-9f9e-899653ea8f1c}</UniqueIdentifier>
-    </Filter>
     <Filter Include="头文件\common_manager">
       <UniqueIdentifier>{5c0ba1a2-f4e2-43b2-ae13-59d9d7721f93}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="头文件\property">
+      <UniqueIdentifier>{68356bf5-1979-41f5-a729-100e031e2ca4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="头文件\particle_effect">
+      <UniqueIdentifier>{e123d085-b8b6-4392-9f9e-899653ea8f1c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -115,7 +115,7 @@
       <Filter>头文件\character\enemy</Filter>
     </ClCompile>
     <ClCompile Include="enemy_dragon_king_state_node.cpp">
-      <Filter>源文件\character</Filter>
+      <Filter>头文件\character\enemy</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -177,13 +177,13 @@
       <Filter>头文件\character\enemy</Filter>
     </ClInclude>
     <ClInclude Include="particle_effect.h">
-      <Filter>头文件\particle</Filter>
+      <Filter>头文件\particle_effect</Filter>
     </ClInclude>
     <ClInclude Include="particle_manager.h">
-      <Filter>头文件\particle</Filter>
+      <Filter>头文件\particle_effect</Filter>
     </ClInclude>
     <ClInclude Include="effect.h">
-      <Filter>头文件\particle</Filter>
+      <Filter>头文件\particle_effect</Filter>
     </ClInclude>
     <ClInclude Include="reverse_time_manager.h">
       <Filter>头文件\common_manager</Filter>
